=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.23 - May 3, 2005

Fix Apache::TestRequest::hostport to return the default host:port
string if $Apache::TestRequest::Module is 'default' or undef [Stas]

Fix Apache::TestRequest::module2url to allow passing '' as a URI
path. [Stas]

tweaks to Apache::TestClient to better deal with corrupted responses
when LWP is not available. [Stas]



=item 1.22 - April 14, 2005

    ******************** IMPORTANT ********************
      this version of Apache-Test does not completely
    configure mod_perl for mod_perl versions 1.99_21 or
    earlier.  Please read the below changes carefully.
    ***************************************************

remove Apache::TestConfig::modperl_2_inc_fixup().  Apache-Test
is no longer Apache2.pm aware - it will not configure mod_perl
support to look in Apache2/ automatically.  [joes]

Add support for mp2's Apache:: -> Apache2:: rename [joes]



=item 1.21 - March 23, 2005

fix Apache::TestConfig (was missing 'use lib' before using
lib::import) [William McKee <william@knowmad.com>]

TestConfigPerl will now configure mod_perl last, giving mod_perl
highest priority throughout the httpd lifecycle.  [Geoffrey Young]

Apache::TestConfig::untaint_path needs to remove empty entries in the
PATH list, since -T considers those tainted too. [Stas]

add Apache::TestHarnessPHP which allows for running client-side
scripts via php instead of perl.  [Geoffrey Young]



=item 1.20 - January 22, 2005

instead of trying to match various custom server name variations (each
vendor seems to replace "Apache" in 'httpd -v' with their own name),
just try to match the "/x.y" in "Foo-Apache-Bar/x.y.z" to figure out
the server generation (rev). [Stas]

extend Apache::TestConfig::which() to search under perl's bin
directory (in the case of local perl install many utils get installed
there, but won't be in PATH). [Stas]

Apache::TestConfig::inherit_load_module handles .dll modules